WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192688
[WinCairo][Clang] DLLLauncherMain.cpp: warning: unused function 'prependPath' and 'appleApplicationSupportDirectory'
https://bugs.webkit.org/show_bug.cgi?id=192688
Summary
[WinCairo][Clang] DLLLauncherMain.cpp: warning: unused function 'prependPath'...
Fujii Hironori
Reported
2018-12-13 18:58:41 PST
clang-cl reports the following warnings:
> [1514/6308] Building CXX object Source\JavaScriptCore\shell\CMakeFiles\testRegExp.dir\DLLLauncherMain.cpp.obj > ..\..\Source\JavaScriptCore\shell\DLLLauncherMain.cpp(83,21): warning: unused function 'appleApplicationSupportDirectory' [-Wunused-function] > static std::wstring appleApplicationSupportDirectory() > ^ > ..\..\Source\JavaScriptCore\shell\DLLLauncherMain.cpp(99,13): warning: unused function 'prependPath' [-Wunused-function] > static bool prependPath(const std::wstring& directoryToPrepend) > ^ > 2 warnings generated.
> [4750/6308] Building CXX object Tools\ImageDiff\CMakeFiles\ImageDiff.dir\__\win\DLLLauncher\DLLLauncherMain.cpp.obj > ..\..\Tools\win\DLLLauncher\DLLLauncherMain.cpp(82,16): warning: unused function 'appleApplicationSupportDirectory' [-Wunused-function] > static wstring appleApplicationSupportDirectory() > ^ > ..\..\Tools\win\DLLLauncher\DLLLauncherMain.cpp(98,13): warning: unused function 'prependPath' [-Wunused-function] > static bool prependPath(const wstring& directoryToPrepend) > ^ > 2 warnings generated.
Attachments
Patch
(4.50 KB, patch)
2018-12-13 20:05 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.65 KB, patch)
2018-12-13 21:53 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2018-12-13 20:05:06 PST
Created
attachment 357291
[details]
Patch
Ross Kirsling
Comment 2
2018-12-13 21:08:58 PST
Comment on
attachment 357291
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=357291&action=review
> Source/JavaScriptCore/shell/DLLLauncherMain.cpp:102 > +#if !defined(WIN_CAIRO) > static bool prependPath(const std::wstring& directoryToPrepend)
Might be nice to rearrange so that we don't need to add two #if blocks, but it's your call.
Fujii Hironori
Comment 3
2018-12-13 21:53:13 PST
Created
attachment 357301
[details]
Patch for landing
Fujii Hironori
Comment 4
2018-12-13 23:55:56 PST
Comment on
attachment 357301
[details]
Patch for landing Clearing flags on attachment: 357301 Committed
r239200
: <
https://trac.webkit.org/changeset/239200
>
Fujii Hironori
Comment 5
2018-12-13 23:55:59 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug